# malguem

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
heek-chat-desktop/: Cargo.toml
heek-chat-desktop/src/: audio_playback.rs  connection.rs  firebase_auth.rs  main.rs  rtc.rs
heek-chat-lib/: Cargo.toml
heek-chat-lib/src/: lib.rs
heek-chat-lib/src/jsonrpc/: mod.rs
heek-chat-lib/src/tarpc/: transport.rs
heek-chat-server/: Cargo.toml
heek-chat-server/src/: connection.rs  firebase_verify.rs  main.rs
malguem-desktop/: Cargo.toml  build.rs
malguem-desktop/src/: audio_capture.rs  codec.rs  connection.rs  firebase_auth.rs  main.rs  rtc.rs  screen_capture.rs  video_playback.rs
malguem-lib/: Cargo.toml
malguem-lib/src/: lib.rs
malguem-lib/src/jsonrpc/: error.rs
malguem-server/: Cargo.toml
malguem-server/src/: connection.rs  firebase_verify.rs  main.rs
