[package]
name = "heek-chat-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
aegis = "0.9.3"
egui = { version = "0.33.0", features = ["serde"] }
heek-chat-lib = { path = "../heek-chat-lib" }
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["serde-transport", "tokio1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
