[package]
name = "heek-chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
heek-chat-lib = { path = "../heek-chat-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tarpc = { version = "0.37.0", features = ["serde-transport", "tokio1", "tcp"] }
tokio-serde = { version = "0.9", features = ["cbor"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }
tokio-postgres = { version = "0.7" }
tokio-tungstenite = "0.26"
futures = "0.3"
async-stream = "0.3"
serde_cbor = "0.11"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
chrono = "0.4.42"
rand = "0.8"
