[package]
name = "malguem-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
aegis = "0.9.3"
eframe = { version = "0.33.0", default-features = true }
egui = { version = "0.33.0", features = ["serde"] }
malguem-lib = { path = "../malguem-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tarpc = { version = "0.37.0", features = [
    "serde-transport",
    "serde1",
    "tokio1",
    "tcp",
] }
tokio-serde = { version = "0.9", features = ["cbor"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2"
tiny_http = "0.12"
urlencoding = "2"
webbrowser = "1"
tokio-tungstenite = "0.26"
futures = "0.3"
serde_cbor = "0.11"
webrtc = "0.13"
async-trait = "0.1"
interceptor = "0.14"
cpal = "0.15"
rtp = "0.13"
opus = "0.3"
rand = "0.8"
scap = "0.1.0-beta.1"
openh264 = "0.9"
bytes = "1"
yuv = "0.8.8"
